@@ -1,3 +1,8 @@
+2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* src/encparse.c (parseEncodingFile): 
+	Coverity #1523: Dereferencing freed pointer "mapping"
+
 2006-04-26  Adam Jackson  <ajax@freedesktop.org>
 
 	* configure.ac:
